--- a/index.html
+++ b/index.html
@@ -3,9 +3,5 @@
 <html>
   <head> </head>
 
-  <body>
-    <p>this is me practicing GIT</p>
-    <p>this is me not forgetting to add comment</p>
-    <h2>zz</h2>
-  </body>
+  <body></body>
 </html>
