--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <html>
   <head> </head>
 
-  <body></body>
+  <body>
+    <h1 class="main__title">Zachary Zinimon</h1>
+    <p class="main__content">This is the main conent for the main page</p>
+    <p class="main__content">This is also main content for the main page</p>
+  </body>
 </html>
